# antra_oop

./: README.md  kursiokai.txt  main  main.cpp  mylib.h  myprogram  program  programa  studentas.cpp  studentas.h  tests.cpp
1_strategija/list/: studentas.h
1_strategija/vector/: CMakeLists.txt  main.cpp  studentas.cpp  studentas.h
2_strategija/list/: CMakeLists.txt  mylib.h  studentas.cpp  studentas.h
2_strategija/vector/: main.cpp  studentas.cpp  studentas.h
3_strategija/list/: studentas.cpp  studentas.h
3_strategija/vector/: main.cpp  mylib.h  studentas.cpp  studentas.h
class/: CMakeLists.txt  main.cpp  studentas.cpp  studentas.h  tests.cpp
myprogram.dSYM/Contents/Resources/DWARF/: myprogram
myprogram.dSYM/Contents/Resources/Relocations/aarch64/: myprogram.yml
